--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="mainAppColor">#d11b1b</color>
+    <color name="mainAppColorDarker">#8f1212</color>
+    <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
+    <color name="bootstrapRed">#D8534F</color>
 </resources>
