--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#d11b1b</color>
     <color name="mainAppColor">#d11b1b</color>
     <color name="mainAppColorDarker">#8f1212</color>
     <color name="white">#ffffff</color>
