--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -3,14 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:id="@+id/container"
+    android:background="@drawable/christmas_image"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="center"
-        android:src="@drawable/chrismas_theme_image" />
 
     <LinearLayout
         android:layout_width="match_parent"
