--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_container"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
@@ -32,15 +33,17 @@
             <ImageView
                 android:layout_width="@dimen/logo_w_h"
                 android:layout_height="@dimen/logo_w_h"
+                android:src="@drawable/santaa"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="30dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#40ffffff"
+                android:background="@drawable/rectangle_with_rounded_angles_almost_green"
                 android:orientation="vertical">
 
+                <!--android:background="#40ffffff"-->
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -75,19 +78,18 @@
 
             </LinearLayout>
 
-            <com.beardedhen.androidbootstrap.BootstrapButton
+            <Button
                 android:id="@+id/btn_login"
+                android:background="@drawable/rectangle_with_rounded_angles_red"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="20dp"
+                android:textStyle="bold"
+                android:textColor="@color/white"
                 android:text="@string/btn_login"
-                app:bootstrapBrand="danger"
-                app:bootstrapSize="lg"
-                app:buttonMode="regular"
-                app:roundedCorners="true"
-                app:showOutline="false" />
-            Ростик Duckonmoon, [16.01.18 13:30]
+                 />
+
             <ProgressBar
                 android:id="@+id/spinner"
                 style="?android:attr/progressBarStyleLarge"
@@ -102,7 +104,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dip"
-                android:background="#59ffffff"
+                android:background="@drawable/rectangle_with_rounded_angles_almost_green"
                 android:paddingEnd="10dp"
                 android:paddingStart="10dp"
                 android:text="@string/btn_forgot_password"
@@ -111,15 +113,7 @@
                 android:textStyle="bold" />
 
 
-            <FrameLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp">
 
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/circle" />
 
                 <Button
                     android:id="@+id/btn_signup"
@@ -128,16 +122,14 @@
                     android:layout_marginBottom="@dimen/top_margin"
                     android:layout_marginEnd="35dp"
                     android:layout_marginStart="35dp"
-                    android:layout_marginTop="@dimen/top_margin"
-                    android:background="@null"
-                    android:ellipsize="end"
+                    android:layout_marginTop="28dp"
+                    android:background="@drawable/rectangle_with_rounded_angles_red"
                     android:text="@string/btn_link_to_register"
                     android:textAllCaps="false"
                     android:textColor="@color/white"
                     android:textSize="15sp" />
-            </FrameLayout>
 
 
         </LinearLayout>
     </FrameLayout>
-</FrameLayout>
+</LinearLayout>
