add small change

--- a/app/src/main/res/drawable/rectangle_with_rounded_angles_almost_green.xml
+++ b/app/src/main/res/drawable/rectangle_with_rounded_angles_almost_green.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
 
-    <solid android:color="@color/ewroklwnefl" />
+    <solid android:color="@color/almost_white" />
 
     <corners
         android:bottomLeftRadius="8dp"
