--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -64,7 +64,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="@dimen/top_margin"
+            android:layout_marginTop="@dimen/top_margin"
+            android:layout_marginEnd="@dimen/top_margin"
+            android:layout_marginStart="@dimen/top_margin"
 
             android:gravity="center"
             android:orientation="vertical"
@@ -160,7 +162,6 @@
                     android:id="@+id/btn_signup"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/top_margin"
                     android:layout_marginEnd="35dp"
                     android:layout_marginStart="35dp"
                     android:layout_marginTop="28dp"
