--- a/app/src/main/res/menu/groups.xml
+++ b/app/src/main/res/menu/groups.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item android:id="@+id/action_add"
+        android:title="add"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_add_black_24dp"
+        android:iconTint="@color/white" />
+
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_sign_out"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/action_sign_out"
         app:showAsAction="never" />
 </menu>
