--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,7 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/christmas_image"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <TextView
             android:id="@+id/verify_email_text"
