--- a/app/src/main/res/layout/content_groups.xml
+++ b/app/src/main/res/layout/content_groups.xml
@@ -10,6 +10,7 @@
     tools:showIn="@layout/app_bar_groups">
 
     <android.support.constraint.ConstraintLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginStart="24dp"
