--- a/app/src/main/res/layout/group_item.xml
+++ b/app/src/main/res/layout/group_item.xml
@@ -20,7 +20,6 @@
             android:layout_margin="@dimen/top_margin"
             android:layout_marginTop="8dp"
             android:gravity="center"
-            android:text="WOWOWWo"
             android:textSize="20sp"
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintHorizontal_bias="0.5"
@@ -36,6 +35,18 @@
             card_view:layout_constraintStart_toStartOf="parent"
             card_view:layout_constraintTop_toBottomOf="@+id/group_name"
             card_view:srcCompat="@drawable/christmas_house" />
+
+        <TextView
+            android:id="@+id/group_description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="16sp"
+            card_view:layout_constraintBottom_toBottomOf="parent"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintHorizontal_bias="0.5"
+            card_view:layout_constraintStart_toEndOf="@+id/group_image"
+            card_view:layout_constraintTop_toTopOf="@+id/group_name" />
 
     </android.support.constraint.ConstraintLayout>
 
