--- a/app/src/main/res/menu/activity_groups_drawer.xml
+++ b/app/src/main/res/menu/activity_groups_drawer.xml
@@ -4,7 +4,16 @@
     tools:showIn="navigation_view">
 
     <group android:checkableBehavior="single">
+        <item android:id="@+id/my_groups"
+            android:checked="true"
+            android:title="@string/my_groups"
+            android:icon="@drawable/ic_people_black_24dp"/>
 
+        <item
+            android:id="@+id/unchecked_groups"
+            android:checked="true"
+            android:title="@string/group_requests"
+            android:icon="@drawable/ic_people_outline_black_24dp" />
     </group>
 
 </menu>
