--- a/app/src/main/res/layout/activity_group_detail.xml
+++ b/app/src/main/res/layout/activity_group_detail.xml
@@ -56,6 +56,17 @@
 
         </LinearLayout>
 
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/imageView3"
+            app:layout_constraintLeft_toRightOf="parent"
+            app:layout_constraintRight_toLeftOf="parent"
+            android:layout_marginStart="@dimen/top_margin"
+            android:layout_marginEnd="@dimen/top_margin"
+            android:layout_marginTop="@dimen/top_margin" />
+
+
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
