--- a/app/src/main/res/layout/activity_group_detail.xml
+++ b/app/src/main/res/layout/activity_group_detail.xml
@@ -2,7 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.softserveinc.test.secretsanta.GroupDetailActivity">
+    tools:context="com.softserveinc.test.secretsanta.activity.GroupDetailActivity">
 
     <data>
         <variable
