--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,6 @@
     <color name="black">#000000</color>
     <color name="bootstrapRed">#7e0713</color>
     <color name="almost_white">#d8d2e6f2</color>
+    <color name="not_white">#d2e6f2</color>
     <color name="almost_white_main">#C2ffffff</color>
 </resources>
