--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,4 +29,10 @@
         <item name="colorControlActivated">@color/mainAppColorDarker</item>
     </style>
 
+
+    <style name="ButtonStyle">
+        <item name="android:padding">3dp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@drawable/rectangle_with_rounded_angles_red</item>
+    </style>
 </resources>
